Added initial concept.

--- a/assets/app.html
+++ b/assets/app.html
@@ -9,5 +9,11 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+
+    <input id="query" type="text">
+    <button id="search">Search</button>
+
+    <div id="container"></div>
+    <script src="main.js"></script>
   </body>
 </html>
